--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.38"
 slint = "1.6"
+timer = "0.2.0"
 
 [build-dependencies]
 slint-build = "1.6"
