--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,11 @@ getrandom = { version = "0.2.2", features = ["js"] }
 
 [[bin]]
 name = "oxidoro-desktop"
-path = "src/main.rs"
+path = "src/old_main.rs"
 
 
 [lib]
-path = "src/web_main.rs"
+path = "src/main.rs"
 crate-type = ["cdylib"]
 
 [dependencies.web-sys]
